# smart-content-vault-astro

./: .env.example  AGENTS.md  PROGRESS.md  README.md  package-lock.json  package.json  vercel.json
api/: index.py  requirements.txt
api/ai/: providers.py  service.py  validator.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md  SETUP.md
microservices/content-extractor/: .gitignore  README.md  pyproject.toml  requirements.txt
microservices/content-extractor/extractor/: __init__.py  cleaner.py  fetcher.py  metadata.py  service.py
microservices/content-extractor/schemas/: __init__.py
microservices/content-extractor/tests/: test_extractor.py  test_schemas.py  test_service.py
microservices/instagram-intelligence-service/: README.md  requirements.txt
microservices/website-intelligence-service/: .env.example  .gitignore  cli.py  requirements.txt
microservices/youtube-intelligence-service/: .env.example  README.md  requirements.txt
prisma/: schema.prisma
prompts/: instagram-module-phase1.md
public/: manifest.json
services/website-intelligence/: cli.py  main.py  requirements.txt
src/components/auth/: LoginForm.astro  (+1 more)
src/layouts/: AuthLayout.astro  BaseLayout.astro  DashboardLayout.astro
src/lib/: categorizer.ts  enrich.ts  processing.ts  tag-generator.ts  thumbnail.ts  utils.ts
src/modules/: README.md  requirements.txt
src/pages/: categories.astro  dashboard.astro  dev.astro  index.astro  instagram.astro  login.astro  profile.astro  register.astro  search.astro  share.astro  timeline.astro
src/styles/: global.css
src/types/: index.ts
(+129 files in other folders)
